# uku-docker

./: .gitignore  README.md  docker-compose.yml  zadar_setup.sh
Zadar/catkin_ws/src/zadar_ros_launch/: CMakeLists.txt
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/: README.txt  run_radar.sh
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/api_templates/: ApiRos.py  ApiSocketClusters.py  ApiSocketOdometry.py
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/lib/: Zadar_Record_csv-x86_64.AppImage
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/lib/zadar-record/: .DirIcon  AppRun  record_csv.desktop
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/lib/zadar-record/usr/lib/: libnorm.so.1  (+2 more)
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/lib/zadar-run/: AppRun  run.desktop
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/zadar_config/: multi_radar.json
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/zadar_config/zprime/: viewer.json  w_250m_1024_config.json  w_400m_512_config_T.json  w_800m_512_config.json  w_85m_512_config.json  w_85m_512_config_T.json
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/zadar_config/zprox/: w_config0_dash.json
Zadar/catkin_ws/src/zadar_ros_launch/src/ZadarSoftwareDriver-v2.7-ROS/zadar_config/zsignal/: w_config_M2_T.json  w_config_M3.json  w_config_M4.json
Zadar/catkin_ws/src/zadar_ros_launch/src/launch/: zadar_run_driver.launch
(+184 files in other folders)
